--- a/rails-app/Vagrantfile
+++ b/rails-app/Vagrantfile
@@ -1,7 +1,13 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "microwave/trusty64"
+  config.vm.box = "ubuntu/trusty64"
+
+  config.vm.provider "virtualbox" do |vb|
+    vb.name = "microwave-rails-box"
+    vb.memory = 2048
+  end
+
   config.vm.network "forwarded_port", guest: 3000, host: 4000
   config.vm.network "forwarded_port", guest: 9292, host: 5000
   config.vm.synced_folder "./", "/home/vagrant/microwave-workspace"
