--- a/rails-app/Vagrantfile
+++ b/rails-app/Vagrantfile
@@ -3,6 +3,12 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
 
+  # Configure cached packages to be shared between instances of the same base box.
+  # More info on http://fgrehm.viewdocs.io/vagrant-cachier/usage
+  if Vagrant.has_plugin?("vagrant-cachier")
+    config.cache.scope = :box
+  end
+
   config.vm.provider "virtualbox" do |vb|
     vb.name = "microwave-rails-box"
     vb.memory = 2048
