--- a/rails-app/Gemfile
+++ b/rails-app/Gemfile
@@ -5,6 +5,8 @@ ruby '2.2.2'
 gem 'rails', '4.2.1'
 gem 'pg'
 gem 'puma'
+gem 'omniauth', '1.2.2'
+gem 'omniauth-saml', '1.3.1'
 
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
