--- a/rails-app/Gemfile
+++ b/rails-app/Gemfile
@@ -23,6 +23,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 group :development, :test do
   gem 'hirb'
+  gem 'rspec-rails', '~> 3.0'
 
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
