--- a/rails-app/app.json
+++ b/rails-app/app.json
@@ -1,5 +1,5 @@
 {
   "name": "Vanilla Rails App",
   "description": "A simple Rails 4 app",
-  "repository": "https://github.com/Microwave-MVC/rails-app",
+  "repository": "https://github.com/Microwave-MVC/rails-app"
 }
